Center lobby forms to avoid extra space

--- a/src/scss/_lobby.scss
+++ b/src/scss/_lobby.scss
@@ -14,7 +14,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-around;
+  justify-content: center;
 }
 
 @media screen and (min-width: 768px) {
